startups/domifa/raw/clusters/ovh-dev/allow-ns-metabase-access.netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ns-metabase-access
  namespace: domifa-preprod
spec:
  policyTypes:
    - Ingress
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: startup-domifa--metabase-preprod
